--- a/index.html
+++ b/index.html
@@ -1,7 +1,75 @@
-<!DOCTYPE html>
-<html>
-  <body>
-    <h1>Hello World</h1>
-    <p>I'm hosted with GitHub Pages.</p>
-  </body>
-</html>
+---
+layout: default
+title: MacPatch
+slug: home
+base_url: "./"
+---
+
+<div class="container-full" id="content">
+
+  <!-- Jumbotron -->
+  <div class="jumbotron">
+    <div class="row">
+      <div class="col-sm-12">
+        <h1>MacPatch</h1>
+        <p class="lead">An open source management suite for large Mac OS X environments such as schools or enterprise.</p>
+        <!-- gitbub watch button -->
+        <iframe src="http://ghbtns.com/github-btn.html?user=macpatch&repo=macpatch.github.io&type=watch&count=true" height="20" width="118" frameborder="0" scrolling="0" style="width:118px; height: 20px;" allowTransparency="true"></iframe>
+        <!-- twitter buttons -->
+        <!-- <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://escobarj.github.io" data-hashtags="macpatch" data-text="MacPatch, The open source Mac OS X management suite" data-lang="en">Tweet</a>
+        <a href="https://twitter.com/escobarje" class="twitter-follow-button" data-show-count="false" data-lang="en">Follow @escobarje</a> -->
+        // <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+        <p><a class="btn btn-lg btn-success" href="https://github.com/macpatch" role="button"><i class="fa fa-github fa-lg"></i> MacPatch on GitHub</a></p>
+      </div>
+    </div>
+    <img src="{{ page.base_url }}images/selfpatch.png" alt="MacPatch" class="center-block" style="vertical-align:bottom;">
+  </div> <!-- /jumbotron -->
+
+  <div class="full-block">
+    <div class="row">
+      <div class="col-sm-2"></div>
+      <div class="col-sm-8">
+        <div class="row">
+          <div class="col-sm-4">
+          	<h3><span class="glyphicon glyphicon-download"></span> Patch Management</h3>
+            <p>Delpy Apple and third party patch content.</p>
+          </div>
+          <div class="col-sm-4">
+            <h3><span class="glyphicon glyphicon-stats"></span> Inventory</h3>
+            <p>Collect inventory data on your entire Mac fleet.</p>
+         </div>
+          <div class="col-sm-4">
+            <h3><span class="glyphicon glyphicon-book"></span> Software Catalog</h3>
+            <p>Users can self install software from your list of approved packages.</p>
+          </div>
+        </div>
+        <!-- second row -->
+        <div class="row">
+          <div class="col-sm-4">
+            <h3><span class="glyphicon glyphicon-fullscreen"></span> Scalable</h3>
+            <p>Deploy as many secondary servers as needed for the size or your fleet.</p>
+          </div>
+          <div class="col-sm-4">
+            <h3><span class="glyphicon glyphicon-tasks"></span> Configurable</h3>
+            <p>Settings such as scaning and patching can be configured.</p>
+         </div>
+          <div class="col-sm-4">
+            <h3><span class="glyphicon glyphicon-share"></span> Open Source</h3>
+            <p>The entire code is avaliable on GitHub.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div> <!-- /full-block -->
+
+    <div class="container textblock">
+      <div class="row">
+        <div class="col-sm-10 col-sm-offset-1">
+          <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ultrices varius sagittis. Integer dolor ipsum, rutrum at gravida ut, mollis vitae sapien. Mauris bibendum mollis ultrices. Nunc sit amet hendrerit est. In hac habitasse platea dictumst. Fusce luctus pellentesque ipsum, a mollis metus pharetra pharetra. Phasellus fermentum porttitor eros, sed lobortis velit scelerisque sit amet. Aenean congue dictum laoreet. Integer dignissim, turpis nec fringilla bibendum, dolor ante fermentum mi, vitae vestibulum mauris arcu ac purus. Aliquam sodales enim mi, sed sagittis turpis elementum ut. Vestibulum et dolor mi.</p>
+          <p class="lead">Maecenas arcu lorem, convallis vel neque quis, vehicula congue nisi. Etiam sed placerat ipsum. Nullam non aliquam lectus. Phasellus in pharetra dui. Quisque sed consequat turpis, in porttitor eros. Vestibulum interdum felis eu eros elementum aliquam. Sed a scelerisque lorem. Suspendisse fringilla rutrum nibh. Aenean varius a nibh eu varius. Vestibulum lorem nibh, dapibus id gravida fermentum, pharetra id sapien. Mauris eget lorem sed enim consequat dignissim. Morbi consectetur sed orci vitae porta. Sed eu fringilla odio. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nulla eu nisi condimentum lorem adipiscing posuere.</p>
+          <p class="lead">In volutpat commodo sodales. Curabitur rutrum euismod erat, id tincidunt metus condimentum quis. Nullam sed placerat nisi. Cras tincidunt porttitor auctor. Cras quis urna faucibus, pellentesque enim ac, vestibulum leo. Sed luctus lacus vitae velit hendrerit, eu tincidunt nibh ultricies. Sed a lectus vitae urna ultrices tempus id nec dolor. Aenean sit amet ultricies mauris. Nulla facilisi.</p>
+      </div>
+    </div>
+  </div> <!-- /container textblock -->
+
+</div> <!-- /container content -->
