--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ base_url: "./"
         <!-- twitter buttons -->
         <!-- <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://escobarj.github.io" data-hashtags="macpatch" data-text="MacPatch, The open source Mac OS X management suite" data-lang="en">Tweet</a>
         <a href="https://twitter.com/escobarje" class="twitter-follow-button" data-show-count="false" data-lang="en">Follow @escobarje</a> -->
-        // <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
         <p><a class="btn btn-lg btn-success" href="https://github.com/macpatch" role="button"><i class="fa fa-github fa-lg"></i> MacPatch on GitHub</a></p>
       </div>
     </div>
@@ -32,7 +32,7 @@ base_url: "./"
         <div class="row">
           <div class="col-sm-4">
           	<h3><span class="glyphicon glyphicon-download"></span> Patch Management</h3>
-            <p>Delpy Apple and third party patch content.</p>
+            <p>Delpoy Apple and third party patch content.</p>
           </div>
           <div class="col-sm-4">
             <h3><span class="glyphicon glyphicon-stats"></span> Inventory</h3>
