--- a/index.html
+++ b/index.html
@@ -13,13 +13,19 @@ base_url: "./"
       <div class="col-sm-12">
         <h1>MacPatch</h1>
         <p class="lead">An open source management suite for large Mac OS X environments such as schools or enterprise.</p>
+        <p><a class="btn btn-lg btn-success" href="https://github.com/macpatch" role="button"><i class="fa fa-github fa-lg"></i> MacPatch on GitHub</a></p>
+        <!-- Social Buttons -->
         <!-- gitbub watch button -->
-        <iframe src="http://ghbtns.com/github-btn.html?user=macpatch&repo=macpatch.github.io&type=watch&count=true" height="20" width="118" frameborder="0" scrolling="0" style="width:118px; height: 20px;" allowTransparency="true"></iframe>
+        <!-- <iframe src="http://ghbtns.com/github-btn.html?user=macpatch&repo=macpatch.github.io&type=watch&count=true" height="20" width="118" frameborder="0" scrolling="0" style="width:118px; height: 20px;" allowTransparency="true"></iframe> -->
         <!-- twitter buttons -->
         <!-- <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://escobarj.github.io" data-hashtags="macpatch" data-text="MacPatch, The open source Mac OS X management suite" data-lang="en">Tweet</a>
         <a href="https://twitter.com/escobarje" class="twitter-follow-button" data-show-count="false" data-lang="en">Follow @escobarje</a> -->
         <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-        <p><a class="btn btn-lg btn-success" href="https://github.com/macpatch" role="button"><i class="fa fa-github fa-lg"></i> MacPatch on GitHub</a></p>
+        <!-- Simple buttons -->
+        <a class="btn btn-link underline-off" href="https://github.com/macpatch"><i class="fa fa-github fa-lg"></i> GitHub</a>
+        <a class="btn btn-link underline-off" href="https://twitter.com/share?text=MacPatch+-+The+open+source+Mac+OS+X+management+suite&url=http%3A%2F%2Fmacpatch.github.io" target="_blank"><i class="fa fa-github fa-lg"></i> Tweet</a>
+        <a class="btn btn-link underline-off" href="https://github.com/macpatch"><i class="fa fa-github fa-lg"></i> Follow</a>
+        <!-- /Social Buttons -->
       </div>
     </div>
     <img src="{{ page.base_url }}images/selfpatch.png" alt="MacPatch" class="center-block" style="vertical-align:bottom;">
