fix twitter buttons

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@ base_url: "./"
         <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
         <!-- Simple buttons -->
         <a class="btn btn-link underline-off" href="https://github.com/macpatch"><i class="fa fa-github fa-lg"></i> GitHub</a>
-        <a class="btn btn-link underline-off" href="https://twitter.com/share?text=MacPatch+-+The+open+source+Mac+OS+X+management+suite&url=http%3A%2F%2Fmacpatch.github.io" onclick="return popup('https://twitter.com/share?text=MacPatch+-+The+open+source+Mac+OS+X+management+suite&url=http%3A%2F%2Fmacpatch.github.io')"><i class="fa fa-github fa-lg"></i> Tweet</a>
-        <a class="btn btn-link underline-off" href="https://github.com/macpatch"><i class="fa fa-github fa-lg"></i> Follow</a>
+        <a class="btn btn-link underline-off" href="https://twitter.com/share?text=MacPatch+-+The+open+source+Mac+OS+X+management+suite&url=http%3A%2F%2Fmacpatch.github.io" onclick="return popup('https://twitter.com/share?text=MacPatch+-+The+open+source+Mac+OS+X+management+suite&url=http%3A%2F%2Fmacpatch.github.io')"><i class="fa fa-twitter fa-lg"></i> Tweet</a>
+        <a class="btn btn-link underline-off" href="https://github.com/macpatch"><i class="fa fa-twitter fa-lg"></i> Follow</a>
         <!-- /Social Buttons -->
       </div>
     </div>
