--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ base_url: "./"
         <!-- Simple buttons -->
         <a class="btn btn-link underline-off" href="https://github.com/macpatch"><i class="fa fa-github fa-lg"></i> <small>GitHub</small></a>
         <a class="btn btn-link underline-off" href="https://twitter.com/share?text=MacPatch+-+The+open+source+Mac+OS+X+management+suite&url=http%3A%2F%2Fmacpatch.github.io" onclick="return popup('https://twitter.com/share?text=MacPatch+-+The+open+source+Mac+OS+X+management+suite&url=http%3A%2F%2Fmacpatch.github.io')"><i class="fa fa-twitter"></i> <small>Tweet</small></a>
-        <a class="btn btn-link underline-off" href="https://github.com/macpatch"><i class="fa fa-twitter"></i> <small>Follow</small></a>
+        <a class="btn btn-link underline-off" href="https://twitter.com/intent/user?screen_name=escobarje" onclick="return popitup('https://twitter.com/intent/user?screen_name=escobarje')"><i class="fa fa-github fa-lg"></i> <small>Follow</small></a>
         <!-- /Social Buttons -->
       </div>
     </div>
