--- a/index.html
+++ b/index.html
@@ -16,15 +16,9 @@ base_url: "./"
         <p><a class="btn btn-lg btn-success" href="https://github.com/macpatch" role="button"><i class="fa fa-github fa-lg"></i> MacPatch on GitHub</a></p>
         <!-- Social Buttons -->
         <!-- gitbub watch button -->
-        <!-- <iframe src="http://ghbtns.com/github-btn.html?user=macpatch&repo=macpatch.github.io&type=watch&count=true" height="20" width="118" frameborder="0" scrolling="0" style="width:118px; height: 20px;" allowTransparency="true"></iframe> -->
-        <!-- twitter buttons -->
-        <!-- <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://escobarj.github.io" data-hashtags="macpatch" data-text="MacPatch, The open source Mac OS X management suite" data-lang="en">Tweet</a>
-        <a href="https://twitter.com/escobarje" class="twitter-follow-button" data-show-count="false" data-lang="en">Follow @escobarje</a> -->
-        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-        <!-- Simple buttons -->
-        <a class="btn btn-link underline-off" href="https://github.com/macpatch"><i class="fa fa-github fa-lg"></i> <small>GitHub</small></a>
+        <a class="btn btn-link underline-off" href="https://github.com/macpatch"><i class="fa fa-github"></i> <small>GitHub</small></a>
         <a class="btn btn-link underline-off" href="https://twitter.com/share?text=MacPatch+-+The+open+source+Mac+OS+X+management+suite&url=http%3A%2F%2Fmacpatch.github.io" onclick="return popup('https://twitter.com/share?text=MacPatch+-+The+open+source+Mac+OS+X+management+suite&url=http%3A%2F%2Fmacpatch.github.io')"><i class="fa fa-twitter"></i> <small>Tweet</small></a>
-        <a class="btn btn-link underline-off" href="https://twitter.com/intent/user?screen_name=escobarje" onclick="return popitup('https://twitter.com/intent/user?screen_name=escobarje')"><i class="fa fa-github fa-lg"></i> <small>Follow</small></a>
+        <a class="btn btn-link underline-off" href="https://twitter.com/intent/user?screen_name=TimCookAppleCEO" onclick="return popitup('https://twitter.com/intent/user?screen_name=TimCookAppleCEO')"><i class="fa fa-twitter"></i> <small>Follow</small></a>
         <!-- /Social Buttons -->
       </div>
     </div>
