--- a/index.html
+++ b/index.html
@@ -62,6 +62,27 @@ base_url: "./"
     </div>
   </div> <!-- /full-block -->
 
+  <div class="container">
+    <div class="row text-center">
+      <div class="col-md-2 col-md-offset-3">
+        <img src="{{ page.base_url }}images/swcatalog.png" alt="MacPatch" class="center-block">
+        <h3>Software Catalog</h3>
+        <p>Users can install software from a catalog that you manage. No admin required. Create muliple catalogs for different groups of users.</p>
+      </div>
+      <div class="col-md-2">
+        <img src="{{ page.base_url }}images/patchgroup.png" alt="MacPatch" class="center-block">
+        <h3>Patch Groups</h3>
+        <p>You can create multiple patch groups. Each patch group can be configured with a different patch baseline. For example create one patch group for your servers and one for desktops.</p>
+      </div>
+      <div class="col-md-2">
+        <img src="{{ page.base_url }}images/terminal.png" alt="MacPatch" class="center-block">
+        <h3>Terminal</h3>
+        <p>Most features can be accessed from the command line for remote administrating or scripting.</p>
+      </div>
+    </div>
+  </div>
+
+
     <div class="container textblock">
       <div class="row">
         <div class="col-sm-10 col-sm-offset-1">
