--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ base_url: "./"
           </div>
         </div>
         <!-- second row -->
-        <div class="row">
+        <div class="row" style="padding-top: 10px">
           <div class="col-sm-4">
             <h3><span class="glyphicon glyphicon-fullscreen"></span> Scalable</h3>
             <p>Deploy as many secondary servers as needed for the size or your fleet.</p>
