--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@ base_url: "./"
 
   <div class="full-block">
     <div class="row">
-      <!-- <div class="col-sm-2"></div> -->
       <div class="col-sm-8 col-sm-offset-2">
         <div class="row">
           <div class="col-sm-4">
@@ -44,7 +43,7 @@ base_url: "./"
           </div>
         </div>
         <!-- second row -->
-        <div class="row" style="padding-top: 10px">
+        <div class="row">
           <div class="col-sm-4">
             <h3><span class="glyphicon glyphicon-fullscreen"></span> Scalable</h3>
             <p>Deploy as many secondary servers as needed for the size or your fleet.</p>
@@ -63,23 +62,21 @@ base_url: "./"
   </div> <!-- /full-block -->
 
   <div class="container">
-    <div class="row text-center">
-      <div class="col-sm-8 col-sm-offset-2">
-        <div class="col-sm-4">
-          <img src="{{ page.base_url }}images/swcatalog.png" alt="MacPatch" class="center-block">
-          <h3>Software Catalog</h3>
-          <p>Users can install software from a catalog that you manage. No admin required. Create muliple catalogs for different groups of users.</p>
-        </div>
-        <div class="col-sm-4">
-          <img src="{{ page.base_url }}images/patchgroup.png" alt="MacPatch" class="center-block">
-          <h3>Patch Groups</h3>
-          <p>You can create multiple patch groups. Each patch group can be configured with a different patch baseline. For example create one patch group for your servers and one for desktops.</p>
-        </div>
-        <div class="col-sm-4">
-          <img src="{{ page.base_url }}images/terminal.png" alt="MacPatch" class="center-block">
-          <h3>Terminal</h3>
-          <p>Most features can be accessed from the command line for remote administrating or scripting.</p>
-        </div>
+    <div class="row text-center" style="padding-top: 80px">
+      <div class="col-sm-4">
+        <img src="{{ page.base_url }}images/swcatalog.png" alt="MacPatch" class="center-block">
+        <h3>Software Catalog</h3>
+        <p>Users can install software from a catalog that you manage. No admin required. Create muliple catalogs for different groups of users.</p>
+      </div>
+      <div class="col-sm-4">
+        <img src="{{ page.base_url }}images/patchgroup.png" alt="MacPatch" class="center-block">
+        <h3>Patch Groups</h3>
+        <p>You can create multiple patch groups. Each patch group can be configured with a different patch baseline. For example create one patch group for your servers and one for desktops.</p>
+      </div>
+      <div class="col-sm-4">
+        <img src="{{ page.base_url }}images/terminal.png" alt="MacPatch" class="center-block">
+        <h3>Terminal</h3>
+        <p>Most features can be accessed from the command line for remote administrating or scripting.</p>
       </div>
     </div>
   </div>
