--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ base_url: "./"
     <img src="{{ page.base_url }}images/selfpatch.png" alt="MacPatch" class="center-block" style="vertical-align:bottom;">
   </div> <!-- /jumbotron -->
 
-  <div class="full-block">
+  <div class="full-block shadow-h3">
     <div class="row">
       <div class="col-sm-8 col-sm-offset-2">
         <div class="row">
