--- a/index.html
+++ b/index.html
@@ -21,8 +21,20 @@ base_url: "./"
         <a class="btn btn-link underline-off" href="https://twitter.com/intent/user?screen_name=TimCookAppleCEO" onclick="return popitup('https://twitter.com/intent/user?screen_name=TimCookAppleCEO')"><i class="fa fa-twitter"></i> <small>Follow</small></a>
         <!-- /Social Buttons -->
       </div>
+      <div class="row">
+        <div class="col-sm-2">
+          <h5>Something</h5>
+          <img class="hidden-xs hidden-sm" src="{{ page.base_url }}images/arrow1.png">
+        </div>
+        <div class="col-sm-8">
+          <img src="{{ page.base_url }}images/selfpatch.png" alt="MacPatch" class="center-block" style="vertical-align:bottom;">
+        </div>
+        <div class="col-sm-2">
+          <h5>Other thing</h5>
+          <img class="hidden-xs hidden-sm" src="{{ page.base_url }}images/arrow2.png">
+        </div>
+      </div>
     </div>
-    <img src="{{ page.base_url }}images/selfpatch.png" alt="MacPatch" class="center-block" style="vertical-align:bottom;">
   </div> <!-- /jumbotron -->
 
   <div class="full-block shadow-h3">
@@ -86,7 +98,7 @@ base_url: "./"
       <div class="row">
         <div class="col-sm-10 col-sm-offset-1">
           <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ultrices varius sagittis. Integer dolor ipsum, rutrum at gravida ut, mollis vitae sapien. Mauris bibendum mollis ultrices. Nunc sit amet hendrerit est. In hac habitasse platea dictumst. Fusce luctus pellentesque ipsum, a mollis metus pharetra pharetra. Phasellus fermentum porttitor eros, sed lobortis velit scelerisque sit amet. Aenean congue dictum laoreet. Integer dignissim, turpis nec fringilla bibendum, dolor ante fermentum mi, vitae vestibulum mauris arcu ac purus. Aliquam sodales enim mi, sed sagittis turpis elementum ut. Vestibulum et dolor mi.</p>
-          
+
           <p class="lead">In volutpat commodo sodales. Curabitur rutrum euismod erat, id tincidunt metus condimentum quis. Nullam sed placerat nisi. Cras tincidunt porttitor auctor. Cras quis urna faucibus, pellentesque enim ac, vestibulum leo. Sed luctus lacus vitae velit hendrerit, eu tincidunt nibh ultricies. Sed a lectus vitae urna ultrices tempus id nec dolor. Aenean sit amet ultricies mauris. Nulla facilisi.</p>
       </div>
     </div>
