--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ base_url: "./"
         <a class="btn btn-link underline-off" href="https://twitter.com/intent/user?screen_name=TimCookAppleCEO" onclick="return popitup('https://twitter.com/intent/user?screen_name=TimCookAppleCEO')"><i class="fa fa-twitter"></i> <small>Follow</small></a>
         <!-- /Social Buttons -->
       </div>
-      <div class="row">
+      <div class="row centered">
         <div class="col-sm-2">
           <h5>Something</h5>
           <img class="hidden-xs hidden-sm" src="{{ page.base_url }}images/arrow1.png">
