--- a/index.html
+++ b/index.html
@@ -25,13 +25,15 @@ base_url: "./"
         <div class="col-sm-2">
           <h5>Something</h5>
           <img class="hidden-xs hidden-sm" src="{{ page.base_url }}images/arrow1.png">
+          <p>Sed luctus lacus vitae velit hendrerit, eu tincidunt nibh ultricies. Sed a lectus vitae urna ultrices tempus id nec dolor. Aenean sit amet ultricies mauris. Nulla facilisi.</p>
         </div>
         <div class="col-sm-8">
           <img src="{{ page.base_url }}images/selfpatch.png" alt="MacPatch" class="center-block" style="vertical-align:bottom;">
         </div>
         <div class="col-sm-2">
-          <h5>Other thing</h5>
           <img class="hidden-xs hidden-sm" src="{{ page.base_url }}images/arrow2.png">
+          <h5>Other thing</h5>
+          <p>Nunc sit amet hendrerit est. In hac habitasse platea dictumst. Fusce luctus pellentesque ipsum, a mollis metus pharetra pharetra. Phasellus fermentum porttitor eros, sed lobortis velit scelerisque sit amet. Aenean congue dictum laoreet.</p>
         </div>
       </div>
     </div>
