--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@ base_url: "./"
 
   <!-- Jumbotron -->
   <div class="jumbotron">
-    <div class="row jumbotron-head">
-      <div class="col-sm-12">
+    <div class="row">
+      <div class="col-sm-12 jumbotron-head">
         <h1>MacPatch</h1>
         <p class="lead">An open source management suite for large Mac OS X environments such as schools or enterprise.</p>
         <p><a class="btn btn-lg btn-success" href="https://github.com/macpatch" role="button"><i class="fa fa-github fa-lg"></i> MacPatch on GitHub</a></p>
