--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@ base_url: "./"
   <!-- Jumbotron -->
   <div class="jumbotron">
     <div class="row">
-      <div class="col-sm-12 jumbotron-head">
+      <div class="col-sm-12 jumbotron-head shadow">
         <h1>MacPatch</h1>
         <p class="lead">An open source management suite for large Mac OS X environments such as schools or enterprise.</p>
         <p><a class="btn btn-lg btn-success" href="https://github.com/macpatch" role="button"><i class="fa fa-github fa-lg"></i> MacPatch on GitHub</a></p>
         <!-- Social Buttons -->
-        <!-- gitbub watch button -->
         </h6>
           <a class="btn btn-link underline-off" href="https://github.com/macpatch"><i class="fa fa-github"></i> GitHub</a>
           <a class="btn btn-link underline-off" href="https://twitter.com/share?text=MacPatch+-+The+open+source+Mac+OS+X+management+suite&url=http%3A%2F%2Fmacpatch.github.io" onclick="return popup('https://twitter.com/share?text=MacPatch+-+The+open+source+Mac+OS+X+management+suite&url=http%3A%2F%2Fmacpatch.github.io')"><i class="fa fa-twitter"></i> Tweet</a>
@@ -26,8 +25,8 @@ base_url: "./"
       <div class="row centered">
         <div class="col-sm-2">
           <h5>Something</h5>
-          <img class="hidden-xs hidden-sm" src="{{ page.base_url }}images/arrow1.png">
           <p>Sed luctus lacus vitae velit hendrerit, eu tincidunt nibh ultricies. Sed a lectus vitae urna ultrices tempus id nec dolor. Aenean sit amet ultricies mauris. Nulla facilisi.</p>
+          <img class="hidden-xs hidden-sm" src="{{ page.base_url }}images/arrow1.png">
         </div>
         <div class="col-sm-8">
           <img src="{{ page.base_url }}images/selfpatch.png" alt="MacPatch" class="center-block" style="vertical-align:bottom;">
@@ -41,7 +40,7 @@ base_url: "./"
     </div>
   </div> <!-- /jumbotron -->
 
-  <div class="full-block shadow-h3">
+  <div class="full-block shadow">
     <div class="row">
       <div class="col-sm-8 col-sm-offset-2">
         <div class="row">
