--- a/index.html
+++ b/index.html
@@ -13,14 +13,12 @@ base_url: "./"
       <div class="col-sm-12 jumbotron-head shadow">
         <h1>MacPatch</h1>
         <p class="lead">An open source management suite for large Mac OS X environments such as schools or enterprise.</p>
-        <p><a class="btn btn-lg btn-success" href="https://github.com/macpatch" role="button"><i class="fa fa-github fa-lg"></i> MacPatch on GitHub</a></p>
+        <p><a class="btn btn-main btn-lg btn-success" href="https://github.com/macpatch" role="button"><i class="fa fa-github fa-lg"></i> MacPatch on GitHub</a></p>
         <!-- Social Buttons -->
-        <h4>
           <a class="btn btn-link underline-off" href="https://github.com/macpatch"><i class="fa fa-github"></i> GitHub</a>
           <a class="btn btn-link underline-off" href="https://twitter.com/share?text=MacPatch+-+The+open+source+Mac+OS+X+management+suite&url=http%3A%2F%2Fmacpatch.github.io" onclick="return popup('https://twitter.com/share?text=MacPatch+-+The+open+source+Mac+OS+X+management+suite&url=http%3A%2F%2Fmacpatch.github.io')"><i class="fa fa-twitter"></i> Tweet</a>
           <a class="btn btn-link underline-off" href="https://twitter.com/intent/user?screen_name=TimCookAppleCEO" onclick="return popitup('https://twitter.com/intent/user?screen_name=TimCookAppleCEO')"><i class="fa fa-twitter"></i> Follow</a>
           <!-- /Social Buttons -->
-        </h4>
       </div>
       <div class="row centered">
         <div class="col-sm-2">
