--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@ base_url: "./"
       </div>
       <div class="row centered">
         <div class="col-sm-2">
-          <h5>Something</h5>
-          <p>Sed luctus lacus vitae velit hendrerit, eu tincidunt nibh ultricies. Sed a lectus vitae urna ultrices tempus id nec dolor. Aenean sit amet ultricies mauris. Nulla facilisi.</p>
+          <h4>Something</h4>
+          <h5>
+            Sed luctus lacus vitae velit hendrerit, eu tincidunt nibh ultricies. Sed a lectus vitae urna ultrices tempus id nec dolor. Aenean sit amet ultricies mauris. Nulla facilisi.
+          </h5>
           <img class="hidden-xs hidden-sm" src="{{ page.base_url }}images/arrow1.png">
         </div>
         <div class="col-sm-8">
@@ -31,8 +33,10 @@ base_url: "./"
         </div>
         <div class="col-sm-2">
           <img class="hidden-xs hidden-sm" src="{{ page.base_url }}images/arrow2.png">
-          <h5>Other thing</h5>
-          <p>Nunc sit amet hendrerit est. In hac habitasse platea dictumst. Fusce luctus pellentesque ipsum, a mollis metus pharetra pharetra. Phasellus fermentum porttitor eros, sed lobortis velit scelerisque sit amet. Aenean congue dictum laoreet.</p>
+          <h4>Other thing</h4>
+          <h5>
+            Nunc sit amet hendrerit est. In hac habitasse platea dictumst. Fusce luctus pellentesque ipsum, a mollis metus pharetra pharetra. Phasellus fermentum porttitor eros, sed lobortis velit scelerisque sit amet. Aenean congue dictum laoreet.
+          </h5>
         </div>
       </div>
     </div>
