style="text-align: right"

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ base_url: "./"
           <!-- /Social Buttons -->
       </div>
       <div class="row centered">
-        <div class="col-sm-2 pull-right">
+        <div class="col-sm-2" style="text-align: right">
           <br>
           <h4>Something</h4>
           <h5>
@@ -32,7 +32,7 @@ base_url: "./"
         <div class="col-sm-8">
           <img src="{{ page.base_url }}images/selfpatch.png" alt="MacPatch" class="center-block" style="vertical-align:bottom;">
         </div>
-        <div class="col-sm-2 pull-left">
+        <div class="col-sm-2" style="text-align: left">
           <br><br>
           <img class="hidden-xs hidden-sm" src="{{ page.base_url }}images/arrow2.png">
           <h4>Other thing</h4>
