--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@ base_url: "./"
     <div class="row">
       <div class="col-sm-12 jumbotron-head shadow">
         <h1>MacPatch</h1>
-        <p class="lead">An open source management suite for large Mac OS X environments such as schools or enterprise.</p>
+        <p class="lead">An open source management suite for large Mac OS X environments.</p>
         <p><a class="btn btn-main btn-lg btn-success" href="https://github.com/macpatch" role="button"><i class="fa fa-github fa-lg"></i> MacPatch on GitHub</a></p>
         <!-- Social Buttons -->
-          <a class="btn btn-link underline-off" href="https://github.com/macpatch"><i class="fa fa-github"></i> GitHub</a>
+          <!-- <a class="btn btn-link underline-off" href="https://github.com/macpatch"><i class="fa fa-github"></i> GitHub</a> -->
           <a class="btn btn-link underline-off" href="https://twitter.com/share?text=MacPatch+-+The+open+source+Mac+OS+X+management+suite&url=http%3A%2F%2Fmacpatch.github.io" onclick="return popup('https://twitter.com/share?text=MacPatch+-+The+open+source+Mac+OS+X+management+suite&url=http%3A%2F%2Fmacpatch.github.io')"><i class="fa fa-twitter"></i> Tweet</a>
           <a class="btn btn-link underline-off" href="https://twitter.com/intent/user?screen_name=TimCookAppleCEO" onclick="return popitup('https://twitter.com/intent/user?screen_name=TimCookAppleCEO')"><i class="fa fa-twitter"></i> Follow</a>
           <!-- /Social Buttons -->
@@ -25,7 +25,7 @@ base_url: "./"
           <br>
           <h4>Something</h4>
           <h5>
-            Sed luctus lacus vitae velit hendrerit, eu tincidunt nibh ultricies. Sed a lectus vitae urna ultrices tempus id nec dolor. Aenean sit amet ultricies mauris. Nulla facilisi.
+            Users can patch at their own convenience, or simply wait to be patched after a scheduled time.
           </h5>
           <img class="hidden-xs hidden-sm" src="{{ page.base_url }}images/arrow1.png">
         </div>
@@ -37,7 +37,7 @@ base_url: "./"
           <img class="hidden-xs hidden-sm" src="{{ page.base_url }}images/arrow2.png">
           <h4>Other thing</h4>
           <h5>
-            Nunc sit amet hendrerit est. In hac habitasse platea dictumst. Fusce luctus pellentesque ipsum, a mollis metus pharetra pharetra. Phasellus fermentum porttitor eros, sed lobortis velit scelerisque sit amet. Aenean congue dictum laoreet.
+            Picture of the menu bar icon, User can easily see the number of outstanding patches, and check their patch state at a glance.
           </h5>
         </div>
       </div>
