--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ base_url: "./"
           <img class="hidden-xs hidden-sm" src="{{ page.base_url }}images/arrow2.png">
           <h4>Other thing</h4>
           <h5>
-            Picture of the menu bar icon, User can easily see the number of outstanding patches, and check their patch state at a glance.
+            User can easily see the number of outstanding patches, and check their patch state at a glance.
           </h5>
         </div>
       </div>
