--- a/gettingstarted.html
+++ b/gettingstarted.html
@@ -6,25 +6,20 @@ base_url: "./"
 ---
 
 <div class="container" id="content">
-
-  <div class="alert alert-info">
-    <br>
-    <p>This is (will be) an getting started page.</p>
-  </div>
-
   <div class="panel panel-default">
     <div class="panel-heading">
       <h3 class="panel-title">MacPro</h3>
     </div>
     <div class="panel-body">
-      <!-- <iframe width="560" height="315" src="//www.youtube.com/embed/SQl2FjaKCAQ?rel=0" frameborder="0" allowfullscreen></iframe> -->
+      <p>This video is hosted on YouTube</p>
       <iframe width="640" height="360" src="https://www.youtube.com/embed/SQl2FjaKCAQ?modestbranding=1&autohide=1" frameborder="0" allowfullscreen></iframe>
     </div>
   </div>
 
+  <p>This video is hosted on github</p>
   <img src="{{ page.base_url }}images/macpatch_env.png" alt="..." class="img-thumbnail">
 
-  <video id="example_video_1" class="video-js vjs-default-skin vjs-big-play-centered" data-setup='{"controls": true, "preload": "auto", "width": "640", "height": "364"}'>
+  <video id="sfcatalog" class="video-js vjs-default-skin vjs-big-play-centered" data-setup='{"controls": true, "preload": "auto", "width": "640", "height": "364"}'>
    <source src="{{ page.base_url }}vids/sfcatalog.mp4" type='video/mp4' />
 </video>
 
