--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ base_url: "./"
           <h5>
             Users can patch at their own convenience, or simply wait to be patched after a scheduled time.
           </h5>
-          <img class="hidden-xs hidden-sm" src="{{ page.base_url }}images/arrow1.png">
+          <img class="hidden-xs hidden-sm pull-right" src="{{ page.base_url }}images/arrow1.png">
         </div>
         <div class="col-sm-8">
           <img src="{{ page.base_url }}images/selfpatch.png" alt="MacPatch" class="center-block" style="vertical-align:bottom;">
