--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ base_url: "./"
         </div>
         <div class="col-sm-2" style="text-align: left">
           <br><br>
-          <img class="hidden-xs hidden-sm" src="{{ page.base_url }}images/arrow2.png">
+          <img class="hidden-xs hidden-sm pull-left" src="{{ page.base_url }}images/arrow2.png">
           <h4>Other thing</h4>
           <h5>
             User can easily see the number of outstanding patches, and check their patch state at a glance.
