--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@ base_url: "./"
       </div>
       <div class="row centered">
         <div class="col-sm-2" style="text-align: right">
-          <!-- <br>
-          <h4>Something</h4>
-          <h5>
-            Users can patch at their own convenience, or simply wait to be patched after a scheduled time.
-          </h5>
-          <img  -->class="hidden-xs hidden-sm pull-right" src="{{ page.base_url }}images/arrow1.png">
+          <!-- <br> -->
+          <!-- <h4>Something</h4> -->
+          <!-- <h5> -->
+            <!-- Users can patch at their own convenience, or simply wait to be patched after a scheduled time. -->
+          <!-- </h5> -->
+          <!-- <img class="hidden-xs hidden-sm pull-right" src="{{ page.base_url }}images/arrow1.png"> -->
         </div>
         <div class="col-sm-8">
           <img src="{{ page.base_url }}images/selfpatch.png" alt="MacPatch" class="center-block" style="vertical-align:bottom;">
