removed code for arrows

--- a/index.html
+++ b/index.html
@@ -22,23 +22,13 @@ base_url: "./"
       </div>
       <div class="row centered">
         <div class="col-sm-2" style="text-align: right">
-          <!-- <br> -->
-          <!-- <h4>Something</h4> -->
-          <!-- <h5> -->
-            <!-- Users can patch at their own convenience, or simply wait to be patched after a scheduled time. -->
-          <!-- </h5> -->
-          <!-- <img class="hidden-xs hidden-sm pull-right" src="{{ page.base_url }}images/arrow1.png"> -->
+          <!-- removed arrows, 6-10-2014 9:53am -->
         </div>
         <div class="col-sm-8">
           <img src="{{ page.base_url }}images/selfpatch.png" alt="MacPatch" class="center-block" style="vertical-align:bottom;">
         </div>
         <div class="col-sm-2" style="text-align: left">
-          <!-- <br><br>
-          <img class="hidden-xs hidden-sm pull-left" src="{{ page.base_url }}images/arrow2.png">
-          <h4>Other thing</h4>
-          <h5>
-            User can easily see the number of outstanding patches, and check their patch state at a glance.
-          </h5> -->
+          <!-- removed arrows, 6-10-2014 9:53am -->
         </div>
       </div>
     </div>
