--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ base_url: "./"
         <!-- Social Buttons -->
           <!-- <a class="btn btn-link underline-off" href="https://github.com/macpatch"><i class="fa fa-github"></i> GitHub</a> -->
           <a class="btn btn-link underline-off" href="https://twitter.com/share?text=MacPatch+-+The+open+source+Mac+OS+X+management+suite&url=http%3A%2F%2Fmacpatch.github.io" onclick="return popup('https://twitter.com/share?text=MacPatch+-+The+open+source+Mac+OS+X+management+suite&url=http%3A%2F%2Fmacpatch.github.io')"><i class="fa fa-twitter"></i> Tweet</a>
-          <a class="btn btn-link underline-off" href="https://twitter.com/intent/user?screen_name=TimCookAppleCEO" onclick="return popitup('https://twitter.com/intent/user?screen_name=TimCookAppleCEO')"><i class="fa fa-twitter"></i> Follow</a>
+          <a class="btn btn-link underline-off" href="https://twitter.com/intent/user?screen_name=macpatchsw" onclick="return popitup('https://twitter.com/intent/user?screen_name=macpatchsw')"><i class="fa fa-twitter"></i> Follow</a>
           <!-- /Social Buttons -->
       </div>
       <div class="row centered">
