--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ base_url: "./"
         <div class="row">
           <div class="col-sm-4">
           	<h3><span class="glyphicon glyphicon-download"></span> Patch Management</h3>
-            <p>Delpoy Apple and third party patch content.</p>
+            <p>Deploy Apple and third party patch content.</p>
           </div>
           <div class="col-sm-4">
             <h3><span class="glyphicon glyphicon-stats"></span> Inventory</h3>
@@ -59,11 +59,11 @@ base_url: "./"
           </div>
           <div class="col-sm-4">
             <h3><span class="glyphicon glyphicon-tasks"></span> Configurable</h3>
-            <p>Settings such as scaning and patching can be configured.</p>
+            <p>Settings such as scanning and patching can be configured.</p>
          </div>
           <div class="col-sm-4">
             <h3><span class="glyphicon glyphicon-share"></span> Open Source</h3>
-            <p>The entire code is avaliable on GitHub.</p>
+            <p>The entire code is available on GitHub.</p>
           </div>
         </div>
       </div>
@@ -75,17 +75,17 @@ base_url: "./"
       <div class="col-sm-4">
         <img src="{{ page.base_url }}images/swcatalog.png" alt="MacPatch" class="center-block">
         <h3>Software Catalog</h3>
-        <p>Users can install software from a catalog that you manage. No admin required. Create muliple catalogs for different groups of users.</p>
+        <p>End users can install software from a catalog that you manage. No admin required. Create multiple catalogs for different teams.</p>
       </div>
       <div class="col-sm-4">
         <img src="{{ page.base_url }}images/patchgroup.png" alt="MacPatch" class="center-block">
         <h3>Patch Groups</h3>
-        <p>You can create multiple patch groups. Each patch group can be configured with a different patch baseline. For example create one patch group for your servers and one for desktops.</p>
+        <p>You can create multiple patch groups. Each patch group can be configured with a different baseline. For example create one patch group for your servers and one for desktops.</p>
       </div>
       <div class="col-sm-4">
         <img src="{{ page.base_url }}images/terminal.png" alt="MacPatch" class="center-block">
         <h3>Terminal</h3>
-        <p>Most features can be accessed from the command line for remote administrating or scripting.</p>
+        <p>Most features can be accessed from the command line for remote administrating and scripting.</p>
       </div>
     </div>
   </div>
@@ -94,9 +94,7 @@ base_url: "./"
     <div class="container textblock">
       <div class="row">
         <div class="col-sm-10 col-sm-offset-1">
-          <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ultrices varius sagittis. Integer dolor ipsum, rutrum at gravida ut, mollis vitae sapien. Mauris bibendum mollis ultrices. Nunc sit amet hendrerit est. In hac habitasse platea dictumst. Fusce luctus pellentesque ipsum, a mollis metus pharetra pharetra. Phasellus fermentum porttitor eros, sed lobortis velit scelerisque sit amet. Aenean congue dictum laoreet. Integer dignissim, turpis nec fringilla bibendum, dolor ante fermentum mi, vitae vestibulum mauris arcu ac purus. Aliquam sodales enim mi, sed sagittis turpis elementum ut. Vestibulum et dolor mi.</p>
-
-          <p class="lead">In volutpat commodo sodales. Curabitur rutrum euismod erat, id tincidunt metus condimentum quis. Nullam sed placerat nisi. Cras tincidunt porttitor auctor. Cras quis urna faucibus, pellentesque enim ac, vestibulum leo. Sed luctus lacus vitae velit hendrerit, eu tincidunt nibh ultricies. Sed a lectus vitae urna ultrices tempus id nec dolor. Aenean sit amet ultricies mauris. Nulla facilisi.</p>
+          <!-- Text block -->
       </div>
     </div>
   </div> <!-- /container textblock -->
