updates to graphics and text

--- a/index.html
+++ b/index.html
@@ -44,22 +44,22 @@ base_url: "./"
           </div>
           <div class="col-sm-4">
             <h3><span class="glyphicon glyphicon-stats"></span> Inventory</h3>
-            <p>Collect inventory data on your entire Mac fleet.</p>
+            <p>Collect inventory data such as admin accounts, installed apps, FileVault status, and more. </p>
          </div>
           <div class="col-sm-4">
             <h3><span class="glyphicon glyphicon-book"></span> Software Catalog</h3>
-            <p>Users can self install software from your list of approved packages.</p>
+            <p>Users can self install software from your list of approved packages. No admin required.</p>
           </div>
         </div>
         <!-- second row -->
         <div class="row">
           <div class="col-sm-4">
             <h3><span class="glyphicon glyphicon-fullscreen"></span> Scalable</h3>
-            <p>Deploy as many secondary servers as needed for the size or your fleet.</p>
+            <p>Easily deploy additional servers as the size of your deployment grows.</p>
           </div>
           <div class="col-sm-4">
             <h3><span class="glyphicon glyphicon-tasks"></span> Configurable</h3>
-            <p>Settings such as scanning and patching can be configured.</p>
+            <p>Settings such as scanning and patching schedules can be customized.</p>
          </div>
           <div class="col-sm-4">
             <h3><span class="glyphicon glyphicon-share"></span> Open Source</h3>
@@ -75,7 +75,7 @@ base_url: "./"
       <div class="col-sm-4">
         <img src="{{ page.base_url }}images/swcatalog.png" alt="MacPatch" class="center-block">
         <h3>Software Catalog</h3>
-        <p>End users can install software from a catalog that you manage. No admin required. Create multiple catalogs for different teams.</p>
+        <p>End users can install software from a catalog that you manage. No admin required. Create multiple catalogs for different sets of users.</p>
       </div>
       <div class="col-sm-4">
         <img src="{{ page.base_url }}images/patchgroup.png" alt="MacPatch" class="center-block">
