added ubuntu font to jumbotron h1

--- a/index.html
+++ b/index.html
@@ -15,20 +15,19 @@ base_url: "./"
         <p class="lead">An open source management suite for large Mac OS X environments.</p>
         <p><a class="btn btn-main btn-lg btn-success" href="https://github.com/SMSG-MAC-DEV/MacPatch" role="button"><i class="fa fa-github fa-lg"></i> MacPatch on GitHub</a></p>
         <!-- Social Buttons -->
-          <!-- <a class="btn btn-link underline-off" href="https://github.com/macpatch"><i class="fa fa-github"></i> GitHub</a> -->
           <a class="btn btn-link underline-off" href="https://twitter.com/share?text=MacPatch+-+The+open+source+Mac+OS+X+management+suite&url=http%3A%2F%2Fmacpatch.github.io" onclick="return popup('https://twitter.com/share?text=MacPatch+-+The+open+source+Mac+OS+X+management+suite&url=http%3A%2F%2Fmacpatch.github.io')"><i class="fa fa-twitter"></i> Tweet</a>
           <a class="btn btn-link underline-off" href="https://twitter.com/intent/user?screen_name=macpatchsw" onclick="return popitup('https://twitter.com/intent/user?screen_name=macpatchsw')"><i class="fa fa-twitter"></i> Follow</a>
           <!-- /Social Buttons -->
       </div>
       <div class="row centered">
         <div class="col-sm-2" style="text-align: right">
-          <!-- removed arrows, 6-10-2014 9:53am -->
+          <!-- left col -->
         </div>
         <div class="col-sm-8">
           <img src="{{ page.base_url }}images/selfpatch.png" alt="MacPatch" class="center-block" style="vertical-align:bottom;">
         </div>
         <div class="col-sm-2" style="text-align: left">
-          <!-- removed arrows, 6-10-2014 9:53am -->
+          <!-- right col -->
         </div>
       </div>
     </div>
