--- a/documentation.html
+++ b/documentation.html
@@ -6,10 +6,11 @@ base_url: "./"
 ---
 
 <div class="container" id="content">
+	<br><br>
+	
+	<div class="alert alert-info">
+		<p>Coming soon.</p>
+	</div>
 
-  <div class="alert alert-info">
-  	<br>
-    <p>This is a page with documentation.</p>
-  </div>
-
+	<br><br><br><br><br>
 </div> <!-- /container -->
