added twitter follow to documentation page

--- a/documentation.html
+++ b/documentation.html
@@ -7,9 +7,9 @@ base_url: "./"
 
 <div class="container" id="content">
 	<br><br>
-	
+
 	<div class="alert alert-info">
-		<p>Coming soon.</p>
+		<p>Coming soon. <a class="btn btn-link underline-off" href="https://twitter.com/intent/user?screen_name=macpatchsw" onclick="return popitup('https://twitter.com/intent/user?screen_name=macpatchsw')"><i class="fa fa-twitter"></i> Follow</a> us on Twitter, we'll let you know when this page is ready.</p>
 	</div>
 
 	<br><br><br><br><br>
