--- a/documentation.html
+++ b/documentation.html
@@ -9,7 +9,8 @@ base_url: "./"
 	<br><br>
 
 	<div class="alert alert-info">
-		<p>Coming soon. <a class="btn btn-link underline-off" href="https://twitter.com/intent/user?screen_name=macpatchsw" onclick="return popitup('https://twitter.com/intent/user?screen_name=macpatchsw')"><i class="fa fa-twitter"></i> Follow us on Twitter</a> we'll let you know when this page is ready.</p>
+		<p>Coming soon.</p> 
+		<p><a class="btn btn-link underline-off" href="https://twitter.com/intent/user?screen_name=macpatchsw" onclick="return popitup('https://twitter.com/intent/user?screen_name=macpatchsw')"><i class="fa fa-twitter"></i> Follow us on Twitter</a> we'll let you know when this page is ready.</p>
 	</div>
 
 	<br><br><br><br><br>
