--- a/documentation.html
+++ b/documentation.html
@@ -8,7 +8,7 @@ base_url: "./"
 <div class="container" id="content">
 	<br><br>
 
-	<div class="alert alert-info">
+	<div class="alert alert-info text-center">
 		<p>Coming soon.</p> 
 		<p><a class="btn btn-link underline-off" href="https://twitter.com/intent/user?screen_name=macpatchsw" onclick="return popitup('https://twitter.com/intent/user?screen_name=macpatchsw')"><i class="fa fa-twitter"></i> Follow us on Twitter</a> we'll let you know when this page is ready.</p>
 	</div>
