--- a/documentation.html
+++ b/documentation.html
@@ -10,7 +10,8 @@ base_url: "./"
 
 	<div class="alert alert-info text-center">
 		<p>Coming soon.</p> 
-		<p><a class="btn btn-link underline-off" href="https://twitter.com/intent/user?screen_name=macpatchsw" onclick="return popitup('https://twitter.com/intent/user?screen_name=macpatchsw')"><i class="fa fa-twitter"></i> Follow us on Twitter</a> we'll let you know when this page is ready.</p>
+		<p><a class="btn btn-link underline-off" href="https://twitter.com/intent/user?screen_name=macpatchsw" onclick="return popitup('https://twitter.com/intent/user?screen_name=macpatchsw')"><i class="fa fa-twitter"></i> Follow us on Twitter</a></p>
+		<p>We'll let you know when this page is ready.</p>
 	</div>
 
 	<br><br><br><br><br>
