--- a/gettingstarted.html
+++ b/gettingstarted.html
@@ -5,7 +5,7 @@ slug: gettingstarted
 base_url: "./"
 ---
 
-<div class="container" id="content">
+<div class="container" id="content" class='row-fluid'>
   <div class='span2 sidebar'>
     <h3>Left Sidebar</h3>
     <ul class="nav nav-tabs nav-stacked">
