--- a/gettingstarted.html
+++ b/gettingstarted.html
@@ -5,40 +5,56 @@ slug: gettingstarted
 base_url: "./"
 ---
 
-<div class="container" id="content" class='row-fluid'>
-  <div class='span2 sidebar'>
-    <h3>Left Sidebar</h3>
-    <ul class="nav nav-tabs nav-stacked">
-      <li><a href='#overview'>Overview</a></li>
-      <li><a href='#sysdiagram'>System diagram</a></li>
-      <li><a href='#vid'>Vid</a></li>
-    </ul>
-  </div>
-  <div class='span10 main'>
-    <div class="panel panel-default">
-      <div class="panel-heading" id="overview">
-        <h3 class="panel-title">MacPro</h3>
+<div class="container" id="content">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-sm-3 col-md-2 sidebar">
+        <ul class="nav nav-sidebar">
+          <li class="active"><a href="#">Overview</a></li>
+          <li><a href="#">Reports</a></li>
+          <li><a href="#">Analytics</a></li>
+          <li><a href="#">Export</a></li>
+        </ul>
+        <ul class="nav nav-sidebar">
+          <li><a href="">Nav item</a></li>
+          <li><a href="">Nav item again</a></li>
+          <li><a href="">One more nav</a></li>
+          <li><a href="">Another nav item</a></li>
+          <li><a href="">More navigation</a></li>
+        </ul>
+        <ul class="nav nav-sidebar">
+          <li><a href="">Nav item again</a></li>
+          <li><a href="">One more nav</a></li>
+          <li><a href="">Another nav item</a></li>
+        </ul>
       </div>
-      <div class="panel-body">
-        <p>This video is hosted on YouTube</p>
-        <iframe width="640" height="360" src="https://www.youtube.com/embed/SQl2FjaKCAQ?modestbranding=1&autohide=1" frameborder="0" allowfullscreen></iframe>
-      </div>
+      <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+        <div class="panel panel-default">
+          <div class="panel-heading" id="overview">
+            <h3 class="panel-title">MacPro</h3>
+          </div>
+          <div class="panel-body">
+            <p>This video is hosted on YouTube</p>
+            <iframe width="640" height="360" src="https://www.youtube.com/embed/SQl2FjaKCAQ?modestbranding=1&autohide=1" frameborder="0" allowfullscreen></iframe>
+          </div>
 
-      <div class="panel-heading" id="sysdiagram">
-        <h3 class="panel-title">System diagram</h3>
-      </div>
-      <div class="panel-body">
-        <img src="{{ page.base_url }}images/macpatch_env.png" alt="..." class="img-thumbnail">
-      </div>
+          <div class="panel-heading" id="sysdiagram">
+            <h3 class="panel-title">System diagram</h3>
+          </div>
+          <div class="panel-body">
+            <img src="{{ page.base_url }}images/macpatch_env.png" alt="..." class="img-thumbnail">
+          </div>
 
-      <div class="panel-heading" id="vid">
-        <h3 class="panel-title">Github vid</h3>
-      </div>
-      <div class="panel-body">
-        <p>This video is hosted on github</p>
-        <video id="sfcatalog" class="video-js vjs-default-skin vjs-big-play-centered" data-setup='{"controls": true, "preload": "auto", "width": "640", "height": "364"}'>
-         <source src="{{ page.base_url }}vids/sfcatalog.mp4" type='video/mp4' />
-        </video>
+          <div class="panel-heading" id="vid">
+            <h3 class="panel-title">Github vid</h3>
+          </div>
+          <div class="panel-body">
+            <p>This video is hosted on github</p>
+            <video id="sfcatalog" class="video-js vjs-default-skin vjs-big-play-centered" data-setup='{"controls": true, "preload": "auto", "width": "640", "height": "364"}'>
+             <source src="{{ page.base_url }}vids/sfcatalog.mp4" type='video/mp4' />
+            </video>
+          </div>
+        </div>
       </div>
     </div>
   </div>
