--- a/gettingstarted.html
+++ b/gettingstarted.html
@@ -5,10 +5,10 @@ slug: gettingstarted
 base_url: "./"
 ---
 
-<div class="container" id="content">
+<div class="container-fluid" id="content">
   <div class="container-fluid">
     <div class="row">
-      <div class="col-sm-3 col-md-2 sidebar">
+      <div class="col-xs-3">
         <ul class="nav nav-sidebar">
           <li class="active"><a href="#">Overview</a></li>
           <li><a href="#">Reports</a></li>
@@ -28,7 +28,7 @@ base_url: "./"
           <li><a href="">Another nav item</a></li>
         </ul>
       </div>
-      <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+      <div class="col-xs-9 col-xs-offset-3">
         <div class="panel panel-default">
           <div class="panel-heading" id="overview">
             <h3 class="panel-title">MacPro</h3>
