--- a/gettingstarted.html
+++ b/gettingstarted.html
@@ -28,7 +28,7 @@ base_url: "./"
           <li><a href="">Another nav item</a></li>
         </ul>
       </div>
-      <div class="col-xs-9 col-xs-offset-3">
+      <div class="col-xs-9">
         <div class="panel panel-default">
           <div class="panel-heading" id="overview">
             <h3 class="panel-title">MacPro</h3>
