--- a/gettingstarted.html
+++ b/gettingstarted.html
@@ -8,7 +8,7 @@ base_url: "./"
 <div class="container-fluid" id="content">
   <div class="container-fluid">
     <div class="row">
-      <div class="col-xs-3">
+      <div class="col-xs-2 col-xs-offset-1">
         <ul class="nav nav-sidebar">
           <li class="active"><a href="#">Overview</a></li>
           <li><a href="#">Reports</a></li>
