--- a/gettingstarted.html
+++ b/gettingstarted.html
@@ -11,52 +11,29 @@ base_url: "./"
     <div class="row">
       <div class="col-xs-2 col-xs-offset-1">
         <ul class="nav nav-sidebar">
-          <li class="active"><a href="#">Overview</a></li>
+          <li><a href="#">Overview</a></li>
           <li><a href="#">Reports</a></li>
           <li><a href="#">Analytics</a></li>
           <li><a href="#">Export</a></li>
         </ul>
-        <ul class="nav nav-sidebar">
-          <li><a href="">Nav item</a></li>
-          <li><a href="">Nav item again</a></li>
-          <li><a href="">One more nav</a></li>
-          <li><a href="">Another nav item</a></li>
-          <li><a href="">More navigation</a></li>
-        </ul>
-        <ul class="nav nav-sidebar">
-          <li><a href="">Nav item again</a></li>
-          <li><a href="">One more nav</a></li>
-          <li><a href="">Another nav item</a></li>
-        </ul>
       </div>
       <div class="col-xs-9">
-        <div class="panel panel-default">
-          <div class="panel-heading" id="overview">
-            <h3 class="panel-title">MacPro</h3>
-          </div>
-          <div class="panel-body">
-            <p>This video is hosted on YouTube</p>
-            <iframe width="640" height="360" src="https://www.youtube.com/embed/SQl2FjaKCAQ?modestbranding=1&autohide=1" frameborder="0" allowfullscreen></iframe>
-          </div>
-
-          <div class="panel-heading" id="sysdiagram">
-            <h3 class="panel-title">System diagram</h3>
-          </div>
-          <div class="panel-body">
-            <img src="{{ page.base_url }}images/macpatch_env.png" alt="..." class="img-thumbnail">
-          </div>
-
-          <div class="panel-heading" id="vid">
-            <h3 class="panel-title">Github vid</h3>
-          </div>
-          <div class="panel-body">
-            <p>This video is hosted on github</p>
-            <video id="sfcatalog" class="video-js vjs-default-skin vjs-big-play-centered" data-setup='{"controls": true, "preload": "auto", "width": "640", "height": "364"}'>
-             <source src="{{ page.base_url }}vids/sfcatalog.mp4" type='video/mp4' />
-            </video>
-          </div>
+        <div class="panel-heading" id="sysdiagram">
+          <h3 class="panel-title">System diagram</h3>
+        </div>
+        <div class="panel-body">
+          <img src="{{ page.base_url }}images/macpatch_env.png" alt="..." class="img-thumbnail">
+        </div>
+        <div class="panel-heading" id="vid">
+          <h3 class="panel-title">Github vid</h3>
+        </div>
+        <div class="panel-body">
+          <p>This video is hosted on github</p>
+          <video id="sfcatalog" class="video-js vjs-default-skin vjs-big-play-centered" data-setup='{"controls": true, "preload": "auto", "width": "640", "height": "364"}'>
+           <source src="{{ page.base_url }}vids/sfcatalog.mp4" type='video/mp4' />
+          </video>
         </div>
       </div>
     </div>
-  </d
+  </div>
 </div> <!-- /container -->
