--- a/gettingstarted.html
+++ b/gettingstarted.html
@@ -11,10 +11,8 @@ base_url: "./"
     <div class="row">
       <div class="col-xs-2 col-xs-offset-1">
         <ul class="nav nav-sidebar">
-          <li><a href="#">Overview</a></li>
-          <li><a href="#">Reports</a></li>
-          <li><a href="#">Analytics</a></li>
-          <li><a href="#">Export</a></li>
+          <li><a href="#sysdiagram">System diagram</a></li>
+          <li><a href="#vid">Video</a></li>
         </ul>
       </div>
       <div class="col-xs-9">
