--- a/gettingstarted.html
+++ b/gettingstarted.html
@@ -15,13 +15,14 @@ base_url: "./"
           <li><a href="#vid">Video</a></li>
         </ul>
       </div>
-      <div class="col-xs-9">
+      <div class="col-xs-9 panel panel-default">
         <div class="panel-heading" id="sysdiagram">
           <h3 class="panel-title">System diagram</h3>
         </div>
         <div class="panel-body">
           <img src="{{ page.base_url }}images/macpatch_env.png" alt="..." class="img-thumbnail">
         </div>
+
         <div class="panel-heading" id="vid">
           <h3 class="panel-title">Github vid</h3>
         </div>
