--- a/gettingstarted.html
+++ b/gettingstarted.html
@@ -15,22 +15,24 @@ base_url: "./"
           <li><a href="#vid">Video</a></li>
         </ul>
       </div>
-      <div class="col-xs-9 panel panel-default">
-        <div class="panel-heading" id="sysdiagram">
-          <h3 class="panel-title">System diagram</h3>
-        </div>
-        <div class="panel-body">
-          <img src="{{ page.base_url }}images/macpatch_env.png" alt="..." class="img-thumbnail">
-        </div>
+      <div class="col-xs-9">
+        <div class="panel panel-default">
+          <div class="panel-heading" id="sysdiagram">
+            <h3 class="panel-title">System diagram</h3>
+          </div>
+          <div class="panel-body">
+            <img src="{{ page.base_url }}images/macpatch_env.png" alt="..." class="img-thumbnail">
+          </div>
 
-        <div class="panel-heading" id="vid">
-          <h3 class="panel-title">Github vid</h3>
-        </div>
-        <div class="panel-body">
-          <p>This video is hosted on github</p>
-          <video id="sfcatalog" class="video-js vjs-default-skin vjs-big-play-centered" data-setup='{"controls": true, "preload": "auto", "width": "640", "height": "364"}'>
-           <source src="{{ page.base_url }}vids/sfcatalog.mp4" type='video/mp4' />
-          </video>
+          <div class="panel-heading" id="vid">
+            <h3 class="panel-title">Github vid</h3>
+          </div>
+          <div class="panel-body">
+            <p>This video is hosted on github</p>
+            <video id="sfcatalog" class="video-js vjs-default-skin vjs-big-play-centered" data-setup='{"controls": true, "preload": "auto", "width": "640", "height": "364"}'>
+             <source src="{{ page.base_url }}vids/sfcatalog.mp4" type='video/mp4' />
+            </video>
+          </div>
         </div>
       </div>
     </div>
