--- a/gettingstarted.html
+++ b/gettingstarted.html
@@ -22,12 +22,13 @@ base_url: "./"
             <h3 class="panel-title">System Requirements</h3>
           </div>
           <div class="panel-body">
-            <p class="lead">Client</p>
+            <p class="lead">Client:</p>
             <ul>
               <li>Mac OS X Intel 32bit or 64bit.</li>
               <li>Mac OS X 10.7.5 or higher.</li>
             </ul>
-            <p class="lead">Server</p>
+            
+            <p class="lead">Server:</p>
             <ul>
               <li>Mac OS X or Mac OS X Server 10.7 or higher.</li>
               <li>Intel, PPC is not supported.</li>
@@ -36,8 +37,19 @@ base_url: "./"
               <li>MySQL version 5.1 or higher. MySQL 5.5 or 5.6 is recommended.</li>
               <li>Xcode 4.3 or higher.</li>
             </ul>
+
             <p><em>Java 7 Issue</em></p>
-            <p>If your using Java 1.7, Oracle did not include the "Java Cryptography Extension (JCE) Unlimited Strength Jurisdiction Policy Files 7". Apparently they are needed for any stronger keys then 128-bit keys. You can get the Unlimited Strength bundles from the Oracle site, <a href="http://www.oracle.com/technetwork/java/javase/downloads/index.html">http://www.oracle.com/technetwork/java/javase/downloads/index.html</a> Installing it is as "simple" as dumping them to the "/System/Library/Frameworks/JavaVM.framework/Versions/CurrentJDK/Home/jre/lib/security/" directory.</p>
+            <p>If your using Java 1.7, Oracle did not include the "Java Cryptography Extension (JCE) Unlimited Strength Jurisdiction Policy Files 7". Apparently they are needed for any stronger keys then 128-bit keys. You can get the Unlimited Strength bundles from the Oracle site, <a href="http://www.oracle.com/technetwork/java/javase/downloads/index.html" target="_blank">http://www.oracle.com/technetwork/java/javase/downloads/index.html</a> Installing it is as "simple" as dumping them to the "/System/Library/Frameworks/JavaVM.framework/Versions/CurrentJDK/Home/jre/lib/security/" directory.</p>
+
+            <pclass="lead">Ports (TCP) used by server:</p>
+            Default
+            <ul>
+              <li>80, 443, 2600, 3601, 4601</li>
+            </ul>
+            Configurable
+            <ul>
+              <li>2600, 3601, 4601</li>
+            </ul>
           </div>
 
           <div class="panel-heading" id="sysdiagram">
