--- a/gettingstarted.html
+++ b/gettingstarted.html
@@ -41,12 +41,12 @@ base_url: "./"
             <p><em>Java 7 Issue</em></p>
             <p>If your using Java 1.7, Oracle did not include the "Java Cryptography Extension (JCE) Unlimited Strength Jurisdiction Policy Files 7". Apparently they are needed for any stronger keys then 128-bit keys. You can get the Unlimited Strength bundles from the Oracle site, <a href="http://www.oracle.com/technetwork/java/javase/downloads/index.html" target="_blank">http://www.oracle.com/technetwork/java/javase/downloads/index.html</a> Installing it is as "simple" as dumping them to the "/System/Library/Frameworks/JavaVM.framework/Versions/CurrentJDK/Home/jre/lib/security/" directory.</p>
 
-            <pclass="lead">Ports (TCP) used by server:</p>
-            Default
+            <p class="lead">Ports (TCP) used by server:</p>
+            <h5>Default</h5>
             <ul>
               <li>80, 443, 2600, 3601, 4601</li>
             </ul>
-            Configurable
+            <h5>Configurable</h5>
             <ul>
               <li>2600, 3601, 4601</li>
             </ul>
