--- a/gettingstarted.html
+++ b/gettingstarted.html
@@ -12,6 +12,7 @@ base_url: "./"
       <div class="col-xs-2 col-xs-offset-1">
         <ul class="nav nav-sidebar">
           <li><a href="#requirements">System requirements</a></li>
+          <li><a href="#install">Install</a></li>
           <li><a href="#sysdiagram">System diagram</a></li>
           <li><a href="#demo-vid">Demo video</a></li>
         </ul>
@@ -38,7 +39,7 @@ base_url: "./"
               <li>Xcode 4.3 or higher.</li>
             </ul>
 
-            <p><em>Java 7 Issue</em></p>
+            <p><h5><em>Java 7 Issue</em></h5></p>
             <p>If your using Java 1.7, Oracle did not include the "Java Cryptography Extension (JCE) Unlimited Strength Jurisdiction Policy Files 7". Apparently they are needed for any stronger keys then 128-bit keys. You can get the Unlimited Strength bundles from the Oracle site, <a href="http://www.oracle.com/technetwork/java/javase/downloads/index.html" target="_blank">http://www.oracle.com/technetwork/java/javase/downloads/index.html</a> Installing it is as "simple" as dumping them to the "/System/Library/Frameworks/JavaVM.framework/Versions/CurrentJDK/Home/jre/lib/security/" directory.</p>
 
             <p class="lead">Ports (TCP) used by server:</p>
@@ -50,6 +51,16 @@ base_url: "./"
             <ul>
               <li>2600, 3601, 4601</li>
             </ul>
+          </div>
+
+          <div class="panel-heading" id="install">
+            <h3 class="panel-title">Install</h3>
+          </div>
+          <div class="panel-body">
+            <p>To get MacPatch up and running first clone the project and review the "MacPatch – Server Install.pdf" file in the docs folder.</p>
+            <pre>mkdir -p /Library/MacPatch/tmp
+cd /Library/MacPatch/tmp
+git clone https://github.com/SMSG-MAC-DEV/MacPatch.git</pre>
           </div>
 
           <div class="panel-heading" id="sysdiagram">
