--- a/gettingstarted.html
+++ b/gettingstarted.html
@@ -15,6 +15,7 @@ base_url: "./"
           <li><a href="#install">Install</a></li>
           <li><a href="#sysdiagram">System diagram</a></li>
           <li><a href="#demo-vid">Demo video</a></li>
+          <li><a href="#license">License</a></li>
         </ul>
       </div>
       <div class="col-xs-7">
@@ -79,6 +80,14 @@ base_url: "./"
              <source src="{{ page.base_url }}vids/sfcatalog.mp4" type='video/mp4' />
             </video>
           </div>
+
+          <div class="panel-heading" id="license">
+            <h3 class="panel-title">License</h3>
+          </div>
+          <div class="panel-body">
+            <p>MacPatch is available under the GNU GPLv2 license. See the <a href="https://github.com/SMSG-MAC-DEV/MacPatch/blob/master/LICENSE">LICENSE</a> file for more info.</p>
+          </div>
+
         </div>
       </div>
     </div>
