--- a/gettingstarted.html
+++ b/gettingstarted.html
@@ -68,7 +68,7 @@ git clone https://github.com/SMSG-MAC-DEV/MacPatch.git</pre>
             <h3 class="panel-title">System diagram</h3>
           </div>
           <div class="panel-body">
-            <img src="{{ page.base_url }}images/macpatch_env.png" alt="..." class="img-thumbnail">
+            <img src="{{ page.base_url }}images/macpatch_env.png" alt="..." class="img-responsive">
           </div>
 
           <div class="panel-heading" id="demo-vid">
