--- a/gettingstarted.html
+++ b/gettingstarted.html
@@ -69,7 +69,7 @@ git clone https://github.com/SMSG-MAC-DEV/MacPatch.git</pre>
           </div>
           <div class="panel-body">
             <img src="{{ page.base_url }}images/macpatch_env.png" alt="..." class="img-responsive">
-            <a href="{{ page.base_url }}images/macpatch_env.png" target="_blank">View full size image</a>
+            <small><a href="{{ page.base_url }}images/macpatch_env.png" target="_blank">View full size image</a></small>
           </div>
 
           <div class="panel-heading" id="demo-vid">
